examples/test/testpolicy15184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15184
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key13: value2
      key29: value8
      key2: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
      podSelector:
        matchLabels:
          key42: value39
          key24: value21
          key26: value29
